s3_8_policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: i1-enforce-signing
spec:
  validationFailureAction: Enforce
  background: false
  webhookTimeoutSeconds: 30
  failurePolicy: Fail
  rules:
    - name: check-signature
      match:
        any:
        - resources:
            kinds:
              - Pod
      verifyImages:
      - imageReferences:
        - "*"
        attestors:
        - count: 1
          entries:
          - keys:
              publicKeys: |
                -----BEGIN PUBLIC KEY-----
                MFkwEwYHKoZIzj0CAQYIKoZIzj0DAQcDQgAE3UeE9nhzZBsJGV223usL7odOio8/
[...]
                -----END PUBLIC KEY-----
